Pancake Rest API

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,25 +1,37 @@
 <h1>{{title}}</h1>
-<p>This API was last updated at {{date}}.</p>
+<p>Brought to you by {{authors}}! This API was last updated at {{date}}.</p>
 <p>
   <em>Current Version:</em> {{version}}
 </p>
 
-<section id='pancake-listing'>
-  <h2>Pancakes Listing</h2>
+<h2>Add Recipe</h2>
+<section id='add-recipe'>
+  <input type="text" id='p-ingredients' value="" placeholder='List of ingredients'>
+  <input type="text" id='p-type' value="" placeholder='Type of pancake'>
+  <input type="text" id='p-topping' value="" placeholder='Topping?'>
+  <input type="text" id='p-syrup' value="" placeholder='Syrup?'>
+  <input type="text" id='p-instructions' value="" placeholder='Instructions'>
+  <input type="text" id='p-time' value="" placeholder='Cook time'>
+  <button type="button" id='p-create-btn'>Add Recipe</button>
+  <div class='error'></div>
+</section>
 
+<h2>Pancakes Listing</h2>
+<section id='pancake-listing'>
 </section>
 
 <!-- defining an underscore.js template -->
-<script type="text/template" id="recipe-template">
-  <article>
-    <strong>Ingredients</strong>: <%= ingredients %> <br>
-    <strong>Type</strong>: <%= type %> <br>
-    <strong>Topping</strong>: <%= topping %> <br>
-    <strong>Syrup</strong>: <%= syrup %> <br>
-    <strong>Instructions</strong>: <%= instructions %> <br>
-    <strong>Time</strong>: <%= time %> <br>
-  </article>
+<script type='text/template' id='recipe-template'>
+<article>
+  <strong>Ingredients</strong>: <%= ingredients %><br>
+  <strong>Type</strong>: <%= type %><br>
+  <strong>Topping</strong>: <%= topping %><br>
+  <strong>Syrup</strong>: <%= syrup %><br>
+  <strong>Instructions</strong>: <%= instructions %><br>
+  <strong>Time</strong>: <%= time %><br>
+</article>
 </script>
 
 <!-- loading custom app -->
 <script src='/javascripts/app.js'></script>
+<script src='/javascripts/app.views.js'></script>
